# ecologits-calculator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  setup-hooks.sh
.github/workflows/: deploy-clever-cloud.yml  lint.yml  push-to-hf.yml  tests.yml
.streamlit/: config.toml
huggingface-space/: README.md  index.html
src/: __init__.py
src/config/: constants.py  content.py  models.py  models_recent.json  scenarios.py
src/config/content/: about.md  citation.bib  hero.html  how_to.html  how_to.md  licence.html  methodology.md  support.md  token_estimator.md
src/core/: equivalences.py  formatting.py  impact_calculator.py  latency_estimator.py  units.py
src/data/: throughputs.json
src/repositories/: electricity_mix.py  model_config.py  models.py  video_models.py
src/ui/: calculator.py  company.py  comparison.py  components.py  equivalents.py  expert.py  expert_company.py  header.py  impacts.py  model_comparison.py  plotting.py  style.css  token_estimator.py  utils.py
src/ui/common/: __init__.py  constants.py  jscode.py
tests/: __init__.py  conftest.py  test_electricity_mix.py  test_electricity_mix_warnings.py  test_equivalences.py  test_expert_company_compute_tokens.py  test_expert_param_extraction.py  test_formatting.py  test_models.py  test_models_json.py  test_scenarios.py
