[project]
name = "ecologits-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ecologits>=0.9.0,<0.10.0",
    "pint>=0.24.4",
    "plotly>=6.2.0",
    "ruff>=0.14.7",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
]

[tool.uv.sources]
ecologits = { git = "https://github.com/genai-impact/ecologits" }

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]
